<resources>
    <string name="app_name">KotlinDataBindingSample</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="bmi">BMI</string>

    <string name="no_name">NO NAME</string>

    <string name="empty">""</string>
    <string name="format">%.1f</string>
    <string name="bmi_plus">BMI: %.1f</string>
    <string name="cm">cm</string>
    <string name="kg">kg</string>
    <string name="title_first_last">%1$s. %2$s %3$s</string>
    <string name="gender_nation_cell">%1$s / %2$s / %3$s</string>

    <string name="move_to_BMICalculateActivity">DataBinding Basic</string>
    <string name="move_to_BMIRealtimeCalculateActivity">DataBinding Bindable</string>
    <string name="move_to_BMIListActivity">BindingAdapter Sample</string>
    <string name="move_to_RandomUserListActivity">Retrofit Sample</string>
</resources>
