<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/move_to_BMICalculateActivity"
        android:onClick="onClickBMICalculate"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/move_to_BMIRealtimeCalculateActivity"
        android:onClick="onClickBMIRealtimeCalculate"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/move_to_BMIListActivity"
        android:onClick="onClickBMIList"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/move_to_RandomUserListActivity"
        android:onClick="onClickRandomUserList"/>

</LinearLayout>
