<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />
        <variable
            name="person"
            type="jp.chau2chaun2.kotlindatabindingsample.model.orma.Person" />
        <variable
            name="task"
            type="jp.chau2chaun2.kotlindatabindingsample.task.BMICalculatorTask" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="@dimen/half_content_width"
                    android:layout_height="wrap_content"
                    android:text="@string/height"/>
                <EditText
                    android:id="@+id/heightEditText"
                    android:layout_width="@dimen/general_content_width"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:inputType="numberDecimal"
                    android:text="@{person.height != null ? @string/format(person.height) : @string/empty}"
                    tools:text="161.0"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cm"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="@dimen/half_content_width"
                    android:layout_height="wrap_content"
                    android:text="@string/weight"/>
                <EditText
                    android:id="@+id/weightEditText"
                    android:layout_width="@dimen/general_content_width"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:inputType="numberDecimal"
                    android:text="@{person.weight != null ? @string/format(person.weight) : @string/empty}"
                    tools:text="60.0"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kg"/>
            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="@{task.loading ? false : true}"
                android:onClick="onClickBmi"
                android:text="@string/bmi"/>

            <RelativeLayout
                android:layout_marginTop="28dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:visibility="@{task.loading ? View.INVISIBLE : View.VISIBLE}"
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{person.bmi != null ? @string/format(person.bmi) : @string/empty}"
                    android:textSize="@dimen/large_text_size"
                    tools:text="BMI: 21.2"/>
                <ProgressBar
                    android:visibility="@{task.loading ? View.VISIBLE : View.INVISIBLE}"
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>
</layout>
