<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="jp.chau2chaun2.kotlindatabindingsample.viewmodel.BMIRealtimeCalculateViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="@dimen/half_content_width"
                    android:layout_height="wrap_content"
                    android:text="@string/height"/>
                <EditText
                    android:id="@+id/heightEditText"
                    android:layout_width="@dimen/general_content_width"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:inputType="numberDecimal"
                    android:text="@{viewModel.inputText}"
                    tools:text="161.0"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cm"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="@dimen/half_content_width"
                    android:layout_height="wrap_content"
                    android:text="@string/weight"/>
                <EditText
                    android:id="@+id/weightEditText"
                    android:layout_width="@dimen/general_content_width"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:inputType="numberDecimal"
                    android:text="@{viewModel.inputText}"
                    tools:text="60.0"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kg"/>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_marginTop="28dp"
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/large_text_size"
                    android:text="@{viewModel.displayBmi}"
                    tools:text="BMI: 21.2"/>
            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>
</layout>
